<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/services">

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="related_manga"
		android:summary="@string/related_manga_summary"
		android:title="@string/related_manga" />

	<com.nyora.hasan72341.settings.utils.SplitSwitchPreference
		android:defaultValue="false"
		android:key="stats_on"
		android:title="@string/reading_stats"
		app:allowDividerAbove="true" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="reading_time"
		android:summary="@string/reading_time_estimation_summary"
		android:title="@string/reading_time_estimation" />


	<PreferenceCategory android:title="@string/tracking">

		<Preference
			android:key="anilist"
			android:summary="@string/loading_"
			android:title="@string/anilist"
			app:icon="@drawable/ic_anilist" />

		<Preference
			android:key="kitsu"
			android:summary="@string/loading_"
			android:title="@string/kitsu"
			app:icon="@drawable/ic_kitsu" />

		<Preference
			android:key="mal"
			android:summary="@string/loading_"
			android:title="@string/mal"
			app:icon="@drawable/ic_mal" />

		<Preference
			android:key="mangabaka"
			android:summary="@string/loading_"
			android:title="@string/mangabaka"
			app:icon="@drawable/ic_mangabaka" />

	</PreferenceCategory>

	<Preference
		android:fragment="com.nyora.hasan72341.settings.discord.DiscordSettingsFragment"
		android:key="discord_rpc"
		android:summary="@string/discord_rpc_summary"
		android:title="@string/discord_rpc"
		app:allowDividerAbove="true"
		app:icon="@drawable/ic_discord" />

</PreferenceScreen>
